--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -273,51 +273,11 @@ jobs:
 
             sleep $INTERVAL
           done
-
-  e2e-testing:
-    name: E2E Test all services
-    runs-on: ubuntu-latest
-    needs: build-docker-compose
-    strategy:
-      matrix:
-        service:
-          - user-service
-          - product-catalog-service
-          - shopping-cart-service
-          - order-service
-          - notification-service
-          - payment-service
-    defaults:
-      run:
-        shell: bash
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-
-      - name: Cache node_modules for ${{ matrix.service }}
-        uses: actions/cache@v3
-        with:
-          path: services/${{ matrix.service }}/node_modules
-          key: node-modules-${{ matrix.service }}-${{ runner.os }}-${{ hashFiles(format('services/{0}/package-lock.json', matrix.service)) }}
-          restore-keys: |
-            node-modules-${{ matrix.service }}-${{ runner.os }}-
-
-      - name: Install dependencies for ${{ matrix.service }} (with retries)
-        working-directory: ./services/${{ matrix.service }}
+      - name: Run tests inside services
         run: |
-          for i in 1 2 3; do npm ci && break || sleep 10; done
-
-      - name: Generate Prisma client for ${{ matrix.service }}
-        working-directory: ./services/${{ matrix.service }}
-        run: |
-          npx prisma generate --schema=./src/prisma/schema.prisma
-
-      - name: Run E2E test for ${{ matrix.service }}
-        working-directory: ./services/${{ matrix.service }}
-        run: |
-          npm run test:e2e
+          docker-compose -f docker-compose.yml exec -T user-service npm run test
+          docker-compose -f docker-compose.yml exec -T product-catalog-service npm run test
+          docker-compose -f docker-compose.yml exec -T shopping-cart-service npm run test
+          docker-compose -f docker-compose.yml exec -T order-service npm run test
+          docker-compose -f docker-compose.yml exec -T payment-service npm run test
+          docker-compose -f docker-compose.yml exec -T notification-service npm run test
