--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
   #         npm run lint
 
   build-docker-compose:
-    name: Build Docker Compose & Wait for Health
+    name: Build Docker Compose & Wait For Health & Run E2E Tests
     runs-on: ubuntu-latest
     defaults:
       run:
