--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,26 +109,11 @@ jobs:
           ELASTICSEARCH_URL=${{ secrets.ELASTICSEARCH_URL }}
           EOF
 
-          cat <<EOF > elasticsearch/.env
+          cat <<EOF > .env
           ELASTIC_PASSWORD=${{ secrets.ELASTIC_PASSWORD }}
-          EOF
-
-          cat <<EOF > postgres/.env
-          POSTGRES_USER=postgres
           POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
-          POSTGRES_DB=ecommerce_user
-          EOF
-
-          cat <<EOF > rabbitmq/.env
-          RABBITMQ_DEFAULT_USER=rmqadmin
           RABBITMQ_DEFAULT_PASS=${{ secrets.RABBITMQ_DEFAULT_PASS }}
-          EOF
-
-          cat <<EOF > kibana/.env
-          ELASTICSEARCH_HOST=http://elasticsearch:9200
-          ELASTICSEARCH_USERNAME=kibana_system
           ELASTICSEARCH_PASSWORD=${{ secrets.KIBANA_PASSWORD }}
-          ELASTIC_PASSWORD=${{ secrets.ELASTIC_PASSWORD }}
           EOF
 
       - name: Set up Docker Compose
