--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -156,8 +156,10 @@ services:
 
   postgres:
     image: postgres:14
-    env_file:
-      - ./postgres/.env
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=ecommerce_user
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
@@ -174,11 +176,12 @@ services:
 
   rabbitmq:
     image: rabbitmq:3-management
+    environment:
+      - RABBITMQ_DEFAULT_USER=rmqadmin
+      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_DEFAULT_PASS}
     ports:
       - "5672:5672"
       - "15672:15672"
-    env_file:
-      - ./rabbitmq/.env
     volumes:
       - rabbitmqdata:/var/lib/rabbitmq
     networks:
@@ -192,13 +195,12 @@ services:
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.5.3
-    container_name: elasticsearch
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=true
       - ES_JAVA_OPTS=-Xms512m -Xmx512m
-    env_file:
-      - ./elasticsearch/.env
+      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+    container_name: elasticsearch
     volumes:
       - esdata:/usr/share/elasticsearch/data
     ports:
@@ -218,20 +220,22 @@ services:
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.5.3
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - ELASTICSEARCH_USERNAME=kibana_system
+      - ELASTICSEARCH_PASSWORD=${ELASTICSEARCH_PASSWORD}
     container_name: kibana
     depends_on:
       - elasticsearch
     ports:
       - "5601:5601"
-    env_file:
-      - ./kibana/.env
     networks:
       - ecommerce-net
     healthcheck:
       test:
         [
           "CMD-SHELL",
-          "curl -f -u elastic:$$ELASTIC_PASSWORD http://localhost:5601/api/status || exit 1",
+          "curl -f -u elastic:$ELASTIC_PASSWORD http://localhost:5601/api/status || exit 1",
         ]
       start_period: 30s
       interval: 15s
